@startuml
'https://plantuml.com/class-diagram

class AbstractGame{
    ...
    +bossSpawn():void
    +enemySpawn():void
    ...():void
}

class CasualMode{
...
    +bossSpawn():void
    +enemySpawn():void
    ...():void
}

class MediumMode{
...
    +bossSpawn():void
    +enemySpawn():void
    ...():void
}
class HardMode{
...
    +bossSpawn():void
    +enemySpawn():void
    ...():void
}

CasualMode --|> AbstractGame
MediumMode --|> AbstractGame
HardMode --|> AbstractGame

@enduml